# oate

./: .gitignore  README.md
oate-proto/: editor.opc  oate-proto.cabal  stack.yaml
oate-proto/src/Oate/: Proto.hs
oate-proto/src/Oate/Proto/: Parser.hs  Printer.hs  Test.hs  Types.hs
oate-proto/src/Oate/Proto/Parser/: Lexer.hs  Types.hs
oate-proto/src/Oate/Proto/Printer/: Opc.hs
