name:                oate-proto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/oate-proto#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Oate.Proto
                     , Oate.Proto.Types
                     , Oate.Proto.Parser
                     , Oate.Proto.Parser.Types
                     , Oate.Proto.Parser.Lexer
                     , Oate.Proto.Printer
                     , Oate.Proto.Printer.Opc
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , lens
                     , text
                     , bytestring
                     , transformers
                     , mtl
                     , containers
                     , cereal
                     , cryptohash-sha1
  -- ghc-options:         -Wall
  default-language:    Haskell2010

test-suite oate-proto-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , oate-proto
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/oate-proto
